# PyAI-Slayer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  codeql.yml  dependency-review.yml  pre-commit.yml  release.yml
docs/: DASHBOARD.md  DOCKER.md  FEATURE_FLAGS.md  FRAMEWORK_ARCHITECTURE.md  METRICS_CALCULATIONS.md  PLUGINS.md  RAG_CALIBRATION_USAGE.md  api_reference.rst  conf.py  contributing.rst  getting_started.rst  index.rst
docs/adr/: 0001-record-architecture-decisions.md  0002-use-pydantic-for-configuration.md  0003-use-playwright-for-browser-automation.md  0004-use-sentence-transformers-for-semantic-validation.md  0005-implement-circuit-breaker-pattern.md  0006-use-pytest-for-testing.md  0007-refactor-metrics-calculator-to-modular-architecture.md  index.rst
docs/images/: .gitkeep
examples/plugins/: __init__.py  example_custom_validator.py  example_event_handler.py
scripts/: __init__.py  calibrate_rag_metrics.py  generate_changelog.py  metrics_utils.py  run_dashboard.py  validate_version.py
src/config/: __init__.py  environments.yaml  feature_flags.py  settings.py  test_config.py
src/core/: __init__.py
src/core/ai/: __init__.py  ai_validator.py  conversation_tester.py  fact_checker.py  hallucination_detector.py  rag_calibration.py  rag_eval_set.py  rag_tester.py  reranker.py
src/core/browser/: __init__.py  browser_manager.py  browser_pool.py
src/core/infrastructure/: __init__.py  cache.py  circuit_breaker.py  dependency_injection.py  events.py  exceptions.py  health.py  resource_manager.py  retry.py  test_distribution.py
src/core/observability/: __init__.py  playwright_tracing.py  prometheus_metrics.py
src/core/security/: __init__.py  prompt_injection_tester.py  security_tester.py
src/core/validation/: __init__.py  localization_helper.py  plugins.py  validation_strategy.py
src/dashboard/: __init__.py  api.py  collectors.py  data_store.py  failure_analyzer.py  metric_validator.py  metrics_calculator.py  metrics_engine.py  metrics_spec.py  models.py  rag_targets.py
src/dashboard/calculators/: __init__.py  agent.py  base_model.py  detectors.py  performance.py  rag.py  reliability.py  safety.py  security.py
src/dashboard/static/: charts_advanced.js  collaboration.js  dashboard.html  dashboard.js  dashboard_old_emojis.html  export_reporting.js  manifest.json  performance.js  smart_features.js  styles.css  sw.js
src/utils/: __init__.py  helpers.py  logger.py  report_generator.py  screenshot_manager.py  timing_utils.py  url_fetcher.py
tests/: __init__.py  conftest.py
tests/e2e/ai/: __init__.py  test_agent_metrics.py  test_conversation_flow.py  test_gpt_arabic.py  test_gpt_english.py  test_hallucination_detection.py  test_output_stability.py  test_performance_stress.py  test_rag_metrics.py  test_response_consistency.py  test_schema_compliance.py
tests/e2e/security/: __init__.py  test_input_sanitization.py  test_prompt_injection.py  test_security_resilience.py
tests/e2e/ui/: __init__.py  test_accessibility.py  test_chat_ui_desktop.py  test_chat_ui_mobile.py
tests/pages/: __init__.py  base_page.py  chat_page.py  locators.py  login_page.py  mixins.py
tests/test_data/expected/: response-schemas.json
tests/test_data/prompts/: injection-payloads.json  security-test-data.json  test-data-ar.json  test-data-en.json
tests/unit/: __init__.py  test_ai_validator.py  test_ai_validator_property.py  test_browser_manager.py  test_circuit_breaker.py  test_exceptions.py  test_retry.py  test_security_tester.py
tests/utils/: validate_test_data.py
