[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyai-slayer"
version = "0.1.0"
description = "The Open Source AI Testing Arsenal - A comprehensive Python automation framework for AI/ML chatbot testing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PyAI-Slayer Contributors"}
]
keywords = ["testing", "automation", "ai", "chatbot", "llm", "qa", "pytest", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # Core Testing Framework
    "pytest>=8.0.0,<9.0.0",  # Constrained by pytest-playwright 0.7.1
    "pytest-xdist>=3.8.0",
    # pytest-rerunfailures removed - causes deadlock with async fixtures
    # Use --reruns=0 or remove plugin if needed for async tests
    "pytest-json-report>=1.5.0",
    
    # Web Automation
    "playwright>=1.56.0",
    "pytest-playwright>=0.7.1",
    
    # AI/LLM Testing
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "torch>=2.9.1",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "deep-translator>=1.11.4",
    
    # Data & Validation
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    
    # Reporting & Observability
    "loguru>=0.7.3",
    "prometheus-client>=0.23.1",
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
    
    # CI/CD & Utilities
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    
    # System Monitoring (for resource utilization metrics)
    "psutil>=7.1.3",  # CPU and Memory metrics
]

[project.optional-dependencies]
gpu = [
    # GPU monitoring (optional - only needed for GPU metrics)
    "pynvml>=13.0.1",  # NVIDIA GPU metrics
]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",  # Constrained by pytest-playwright 0.7.1
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.148.1",  # Property-based testing
    
    # Code Quality
    "black>=25.11.0",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
    "bandit[toml]>=1.8.6",  # Security linting
    "pre-commit>=3.8.0",  # Pre-commit hooks
    
    # Type Stubs
    "types-requests>=2.32.4",
    "types-PyYAML>=6.0.12",
    
    # Documentation
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.5.2",
    "myst-parser>=4.0.1",  # Markdown support for Sphinx
    
    # Build Tools
    "build>=1.3.0",
    "twine>=6.2.0",
]

[project.urls]
# Update these with your actual repository URLs
Homepage = "https://github.com/suneel944/pyai-slayer"
Documentation = "https://github.com/suneel944/pyai-slayer#readme"
Repository = "https://github.com/suneel944/pyai-slayer"
Issues = "https://github.com/suneel944/pyai-slayer/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["config", "core", "utils"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]

# Black Configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff Configuration
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".github",
]

# Bandit Security Configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = [
    "B101",  # assert_used
    "B601",  # shell_injection_subprocess
    "B110",  # try_except_pass (acceptable in some cases)
    "B311",  # random (used for non-security purposes: jitter, feature flags)
    "B324",  # MD5 (used for non-security purposes: caching, feature flags)
    "B608",  # SQL injection (false positive - using parameterized queries)
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # allow unused args and assert in tests

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "pages", "utils"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "transformers.*",
    "playwright.*",
    "bert_score.*",
    "rouge_score.*",
    "deep_translator.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--json-report",
    "--json-report-file=reports/report.json"
]
markers = [
    "smoke: Smoke tests - critical path only",
    "regression: Full regression test suite",
    "ui: UI behavior tests",
    "ai: AI response validation tests",
    "security: Security and injection tests",
    "desktop: Desktop browser tests",
    "mobile: Mobile browser tests",
    "english: English language tests",
    "arabic: Arabic language tests",
    "debug: Diagnostic or smoke checks",
    "slow: Tests that take longer to execute",
    "conversation: Multi-turn conversation tests",
    "rag: RAG (Retrieval-Augmented Generation) tests",
    "schema: Schema compliance and structured output tests",
    "stability: Output stability and consistency tests",
    "agent: Agent and autonomous system tests",
    "performance: Performance and stress tests",
]
log_cli = "true"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
timeout = "300"
# asyncio_mode removed - using sync API

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
